--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@
   --main-color: #5584ac;
   --secondary-color: #333;
   --accent-color: #fff;
+
+  --fonts: "Montserrat", sans-serif;
 }
 
 *,
@@ -31,6 +33,12 @@ li {
   list-style: none;
 }
 
+header,
+main,
+section {
+  padding: 0.6rem 0rem;
+}
+
 /* custom classes  */
 .container {
   max-width: min(100% - 2rem, 1260px);
@@ -38,4 +46,19 @@ li {
 }
 .colorize {
   color: var(--main-color);
+}
+.btn {
+  padding: 0.5rem 1rem;
+  background-color: var(--main-color);
+  color: var(--accent-color);
+  border-radius: 4px;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  font-family: var(--fonts);
+  transition: all 0.5s ease;
+}
+.btn:active {
+  transform: translateY(5px);
 }
